updated k2dart.bat with bug workaround